Fixed Lists on the Work page
So, the tech list wasn't aligned properly. I added a div around it and it fixed it to be perfectly aligned.

--- a/portfolio-app/src/App.scss
+++ b/portfolio-app/src/App.scss
@@ -124,9 +124,13 @@ header {
             .tech-used {
                 text-align: center; 
             }
-            ol {
-                display: grid;
-                place-items: center;
+            .tech-list {
+                display: flex;
+                justify-content: center;
+                margin: -1em 0 -1em;
+                ol {
+                    text-align: left;
+                }  
             }
             .readMore {
                 text-align: center;
